# google-sheets-mcp

./: .env.example  .gitignore  README.md  fastmcp.json  pyproject.toml
configs/: claude_code_config.json
docs/deployment/: DEPLOYMENT.md
docs/setup/: GOOGLE_OAUTH_SETUP.md
scripts/: health_check.sh  install.sh  start.sh
src/: server.py  server_http.py
tests/: TESTING.md  __init__.py  conftest.py  test_server.py
